event modal checklist overflow fixed

--- a/frontend/src/styles/_home_4-offer-modal.scss
+++ b/frontend/src/styles/_home_4-offer-modal.scss
@@ -277,7 +277,6 @@
 .modal-checklist {
 	&--event {
 		grid-column: 1 / -1;
-		width: max-content;
 	}
 	&__list {
 		@extend .modal__list;
